kube-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-proj
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labor
  labels:
    name: labor
  namespace: student-proj
spec:
  replicas: 1
  selector:
    matchLabels:
      name: labor
  template:
    metadata:
      labels:
        name: labor
    spec:
      containers:
      - image: ashunaev/labor-db.svc.cluster.local:3.0
        name: labor
        volumeMounts:
        - mountPath: /var/www/html
          name: myvolume
      volumes:
      - name: myvolume
        hostPath:
          path: /Final_Student_Project/php_page/
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: labor
  labels:
    name: labor
  namespace: student-proj
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30030
  selector:
    name: labor
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labor
  namespace: student-proj
spec:
#  tls:
#  - hosts:
#    - sock-shop.bar.com
#    secretName: sock-ingress-tls
  rules:
    - host: test.bar.com
      http:
        paths:
        - backend:
            serviceName: student-proj
            servicePort: 8080


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labor-db
  labels:
    name: labor-db
  namespace: student-proj
spec:
  replicas: 1
  selector:
    matchLabels:
      name: labor-db
  template:
    metadata:
      labels:
        name: labor-db
    spec:
      containers:
      - name: labor-db
        image: postgres:13.2
      ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: myvolume
      volumes:
      - name: myvolume
        hostPath:
          path: /Final_Student_Project/data
          type: Directory
#        env:
#          - name: POSTGRES_PASSWORD
#            value: '1234'
#            name: user
#            value: 'postgres'
#            name: host
#            value: labor-db.svc.cluster.local
#        ports:
#        - containerPort: 5432
#      nodeSelector:
#        beta.kubernetes.io/os: linux

---
apiVersion: v1
kind: Service
metadata:
  name: labor-db
  labels:
    name: labor-db
  namespace: student-proj
spec:
  ports:
    # the port that this service should serve on
  - port: 5432
    targetPort: 5432
  selector:
    name: labor-db
