kube-deploy2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-proj
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labor
  labels:
    name: labor
  namespace: student-proj
spec:
  replicas: 1
  selector:
    matchLabels:
      name: labor
  template:
    metadata:
      labels:
        name: labor
    spec:
      containers:
      - name: labor
        image: ashunaev/final_student_project_website:v0.1
---
apiVersion: v1
kind: Service
metadata:
  name: labor
  labels:
    name: labor
  namespace: student-proj
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8002
    nodePort: 30030
  selector:
    name: labor
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labor
  namespace: student-proj
spec:
#  tls:
#  - hosts:
#    - sock-shop.bar.com
#    secretName: sock-ingress-tls
  rules:
    - host: test.bar.com
      http:
        paths:
        - backend:
            serviceName: student-proj
            servicePort: 8080
